Schema change of tables as per req.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 supabaseUrl=""
 supabaseKey=""
 POSTGRES_URL=""
-ENCRYPTION_KEY=""
+ENCRYPTION_KEY="This is development key. It needs to be changed. TODO:"
